--- a/config.json
+++ b/config.json
@@ -1,7 +1,13 @@
 [
     {
         "name": "Karambit | Black Laminate",
-        "wear": "Well Worn",
+        "wear": "Well-Worn",
+        "stattrak": false,
+        "target_site_identifier":"cat=Knife&item=Black+Laminate&type=Karambit&exterior=5"
+    },
+    {
+        "name": "M4A1-S | Printstream",
+        "wear": "Field-Tested",
         "stattrak": false,
         "target_site_identifier":"cat=Knife&item=Black+Laminate&type=Karambit&exterior=5"
     }
